--- a/index.html
+++ b/index.html
@@ -21,20 +21,23 @@
 <p>ChatGPT est un prototype d'agent conversationnel utilisant l'intelligence artificielle, développé par OpenAI et spécialisé dans le dialogue.</p>
 <p> L'agent conversationnel de ChatGPT est basé sur le modèle de langage GPT-3 d'OpenAI, et est affiné en continu grâce à l'utilisation de techniques d'apprentissage supervisé et d'apprentissage par renforcement, afin d'améliorer les performances du logiciel.</p>
 <p>Lancé en novembre 2022 dans une version gratuite et non connectée à Internet, ChatGPT bénéfice d’une large exposition médiatique et reçoit un accueil globalement positif, bien que son exactitude factuelle soit critiquée.</p>
+<h3 class="Centre">|PUBLICITÉ|Tentez votre chance avec ce nouveau jeu à gratter |PUBLICITÉ|</h3>
+<img class="Centre" src="pub jeux à gratter.jpg" alt="publicité jeux à gratter">
+<h3 class="Centre" >|Attention jouer à des jeux d'argent peut exposer à des risques majeurs||Pour en savoir plus cliquez
+  <a href="https://youtu.be/dQw4w9WgXcQ">ici</a></h3>
+  
+
+
 <p>En raison de ses capacités multiples, le prototype suscite également des inquiétudes en raison des détournements possibles à des fins malveillantes, des risques de plagiat dans le monde académique et de possibles suppressions d'emplois dans certains secteurs.
   En janvier 2023, ChatGPT compte plus de 100 millions d’utilisateurs enregistrés.</p>
-  <p>Voici une vidéo qui explique tout</p>
+  <p>Voici une vidéo pour mieux comprendre:</p>
   
   <iframe width="627" height="353" src="https://www.youtube.com/embed/8kIxMUrdLQw" title="TUTO ChatGPT : Comment utiliser ChatGPT ? (et 3 conseils pour bien débuter)" frameborder="0" allow="accelerometer; autoplay;
    clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-   <img class="Centre" src="pres-montpellier-pignan-croit-gagner-50-000e-grattage-cetait-canular_30458282.html" alt="publicité jeux à gratter">
 
 
-
-
-
-
+ 
 
 
 
@@ -42,5 +45,6 @@
 
 
   <script src="sketch.js"></script>
+
   </body>
 </html>
